# ffpm

./: LICENSE.txt  README.md  ffpm.py  pyproject.toml
.github/workflows/: build.yml
assets/: README.md
ffpm/.github/workflows/: build.yml
